--- a/css/bigbang.css
+++ b/css/bigbang.css
@@ -87,7 +87,7 @@ a {
 
 #final-text-container {
     position: fixed;
-    top: 50%;
+    top: 48%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
@@ -107,7 +107,15 @@ a {
 }
 
 #final-text {
-    font-size: 48px;
+    letter-spacing: 15px;
+    font-size: 52px;
+}
+
+@media screen and (max-width: 926px) {
+    #final-text {
+        letter-spacing: 5px;
+        font-size: 48px;
+    }
 }
 
 /* Button */
@@ -152,7 +160,7 @@ a {
     }
 }
 
-button {
+#skip-button {
     display: flex;
     align-items: center;
     font-family: inherit;
@@ -161,32 +169,60 @@ button {
     color: white;
     border: none;
     position: relative;
-    overflow: hidden;
-}
-
-#skip-button {
     font-size: 14px;
     background: linear-gradient(to right, #190d8c30, #5f159c40, #3e242430);
     border-radius: 2px;
     backdrop-filter: blur(10px);
 }
 #cta-button {
-    font-size: 16px;
-    background: linear-gradient(
-        to right,
-        #9739e0,
-        #1ea6cc,
-        #1ea6cc,
-        #93dcf0
-    );
-    backdrop-filter: blur(10px);
-    color: white;
-    padding: 12px 24px;
-    border: none;
-    cursor: pointer;
-    box-shadow: 0 0 15px rgba(95, 21, 156, 0.8), 0 0 30px rgba(95, 21, 156, 0.2);
-    transition: box-shadow 0.3s ease, transform 0.3s ease;
-    animation: blinking 4.8s infinite ease-in-out;
+    padding: 0;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 13rem;
+    overflow: hidden;
+    height: 3.2rem;
+    background-size: 300% 300%;
+    backdrop-filter: blur(1rem);
+    transition: 0.5s;
+    animation: gradient_301 5s ease infinite;
+    border: double 2px transparent !important;
+    background-image: linear-gradient(#000116, #000116),
+        linear-gradient(
+        137.48deg,
+        #1b4fde 10%,
+        #fe53bb 45%,
+        #8f51ea 67%,
+        #0044ff 87%
+        );
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+}
+
+#cta-button:hover {
+    transform: scale(1.08) !important;
+}
+
+#cta-button:active {
+    border: double 4px #fe53bb;
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    animation: none;
+}
+
+@keyframes gradient_301 {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 #cta-button:hover {
@@ -247,126 +283,61 @@ button:hover span {
 
 /* Icon */
 .fa-star:nth-child(1) {
-  color: #817ff7;
+  color: #7878ff;
   filter: blur(0.8px);
-  font-size: 22px;
+  font-size: 14px;
   animation: reflexion-left 2s infinite;
+  transform: translateY(-8px);
 }
 .fa-star:nth-child(2) {
-  color: #b8e4ec;
+  color: #dd93ed;
   filter: blur(0.9px);
-  font-size: 22px;
+  font-size: 14px;
   animation: reflexion-right 2s infinite;
+  transform: translateY(-8px);
 }
 @keyframes reflexion-left {
   0% {
-    transform: rotate(0deg) scale(1);
+    transform: translateY(-8px) (0deg) scale(1);
   }
   50% {
-    transform: rotate(-10deg) scale(1.1);
+    transform: translateY(-8px) rotate(-10deg) scale(1.1);
   }
   100% {
-    transform: rotate(0deg) scale(1);
+    transform: translateY(-8px) rotate(0deg) scale(1);
   }
 }
 @keyframes reflexion-right {
   0% {
-    transform: rotate(0deg) scale(1);
+    transform: translateY(-8px) rotate(0deg) scale(1);
   }
   50% {
-    transform: rotate(10deg) scale(1.1);
+    transform: translateY(-8px) rotate(10deg) scale(1.1);
   }
   100% {
-    transform: rotate(0deg) scale(1);
+    transform: translateY(-8px) rotate(0deg) scale(1);
   }
 }
-
-/* Images */
-.astronaut {
+/* Planet */
+#planet {
+    border: solid #000116 1px;
+    width: 190vw;
+    min-width: 800px;
+    height: 100vh;
     position: fixed;
-    top: 0%;
-    left: 0%;
-    display: none;
-    animation: move 10s ease-in-out infinite;
-    z-index: 1;
-}
-
-@keyframes move {
-  0% {
-    transform: translateX(0em) translateY(0em);
-  }
-  25% {
-    transform: translateY(-1em) translateX(-1em);
-    rotate: -10deg;
-  }
-  50% {
-    transform: translateY(1em) translateX(-1em);
-  }
-  75% {
-    transform: translateY(-1.25em) translateX(1em);
-    rotate: 10deg;
-  }
-  100% {
-    transform: translateX(0em) translateY(0em);
-  }
-}
-
-.moon {
-    display: none;
-    position: fixed;
-    top: 70%;
-    right: -10%;
-    width: 600px;
-    height: 600px;
-    background: radial-gradient(
-        circle at 30% 30%,
-        #ffffff,
-        #7899f2
-    );
+    top: 80%;
+    left: -50%;
     border-radius: 50%;
-    box-shadow: 
-        0 0 10px #97bff099,
-        0 0 20px #8e93cfa1,
-        0 0 30px #b4c1ec9d;
-    animation: rotate 10s linear infinite;
-    z-index: 1;
-}
-
-.moon::before,
-.moon::after {
-    content: '';
-    position: absolute;
-    background: rgba(0, 0, 200, 0.1);
-    border-radius: 50%;
-}
-
-.moon::before {
-    width: 70px;
-    height: 70px;
-    top: 20%;
-    left: 30%;
-    box-shadow: 
-        0 0 20px rgba(0, 0, 200, 0.2),
-        0 0 40px rgba(0, 0, 200, 0.1);
-}
-
-.moon::after {
-    width: 40px;
-    height: 40px;
-    top: 45%;
-    left: 20%;
-    box-shadow: 
-        0 0 15px rgba(0, 0, 200, 0.2),
-        0 0 30px rgba(0, 0, 200, 0.1);
-}
-
-@keyframes rotate {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(80deg);
-    }
+    background-color: #000116;
+    border-color: #5b51ea50;
+    box-shadow: 0 0 60px 10px #451bde90,
+                0 0 100px 20px #451bde50,
+                0 0 140px 30px #451bde20,
+                inset 0 0 50px 2px #451bde90,
+                inset 0 0 80px 3px #5b51ea50,
+                inset 0 0 120px 4px #7253fe10;
+    overflow: hidden;
+    opacity: 0;
 }
 
 /* Stars */
@@ -377,6 +348,7 @@ section{
     width: 100%;
     height: 100vh;
     display: none;
+    filter: blur(1px);
 }
 
 @keyframes animateBg{
@@ -409,100 +381,101 @@ section span::before{
     height: 1px;
     background: linear-gradient(90deg,#93dcf0,transparent);
 }
-@keyframes animate
-{
-    0%
-    {
-        transform: rotate(315deg) translateX(0);
+@keyframes animate {
+    0% {
+        transform: translateX(0);
         opacity: 1;
     }
-    70%
-    {
+    70% {
+        transform: rotate(5deg) translateX(0);
         opacity: 1;
     }
-    100%
-    {
-        transform: rotate(315deg) translateX(-1000px);
+    100% {
+        transform: rotate(-5deg) translateX(-2200px);
         opacity: 0;
     }
 }
 span:nth-child(1){
-    top: -20px;
-    right: 0;
+    top: 50px;
+    right: -10px;
     left: initial;
     animation-delay: 0s;
-    animation-duration: 5s;
+    animation-duration: 10s;
 }
 span:nth-child(2){
-    top: -20px;
-    right: 80px;
+    top: 100px;
+    right: -10px;
     left: initial;
     animation-delay: 0.2s;
-    animation-duration: 3s;
+    animation-duration: 6s;
 }
 span:nth-child(3){
-    top: -20px;
-    right: 0px;
+    top: 70px;
+    right: -10px;
     left: initial;
     animation-delay: 0.4s;
-    animation-duration: 2s;
+    animation-duration: 6s;
 }
 span:nth-child(4){
-    top: -20px;
-    right: 180px;
+    top: 90px;
+    right: -10px;
     left: initial;
     animation-delay: 0.6s;
-    animation-duration: 2s;
+    animation-duration: 4s;
 }
 span:nth-child(5){
-    top: -20px;
-    right: 400px;
+    top: 65px;
+    right: -10px;
     left: initial;
     animation-delay: 0.8s;
-    animation-duration: 3s;
+    animation-duration: 6s;
 }
 span:nth-child(6){
-    top: -20px;
-    right: 600px;
+    top: 40px;
+    right: -10px;
     left: initial;
     animation-delay: 1s;
-    animation-duration: 5s;
+    animation-duration: 10s;
 }
 span:nth-child(7){
-    top: -20px;
-    right: 50px;
+    top: 90px;
+    right: -10px;
     left: initial;
     animation-delay: 1.2s;
-    animation-duration: 4s;
+    animation-duration: 8s;
 }
 span:nth-child(8){
-    top: -20px;
-    right: 70px;
+    top: 76px;
+    right: -10px;
     left: initial;
     animation-delay: 3s;
-    animation-duration: 3s;
+    animation-duration: 6s;
 }
 span:nth-child(9){
-    top: -20px;
-    left: 200px;
+    top: 50px;
+    right: -10px;
+    left: initial;
     animation-delay: 0.75s;
-    animation-duration: 5s;
+    animation-duration: 10s;
 }
 span:nth-child(9){
-    top: -20px;
-    left: 680px;
+    top: 80px;
+    right: -10px;
+    left: initial;
     animation-delay: 2s;
-    animation-duration: 3s;
+    animation-duration: 6s;
 }
 span:nth-child(10){
-    top: -20px;
-    left: 650px;
+    top: 86px;
+    right: -10px;
+    left: initial;
     animation-delay: 2s;
-    animation-duration: 4s;
+    animation-duration: 8s;
 }
 span:nth-child(11){
-    top: -20px;
-    left: 500px;
+    top: 72px;
+    right: -10px;
+    left: initial;
     animation-delay: 2s;
-    animation-duration: 5s;
+    animation-duration: 10s;
 }
