--- a/css/bigbang.css
+++ b/css/bigbang.css
@@ -87,7 +87,7 @@ a {
 
 #final-text-container {
     position: fixed;
-    top: 48%;
+    top: 46%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
@@ -369,7 +369,7 @@ section span{
     background: #93dcf0;
     border-radius: 50%;
     box-shadow: 0 0 0 4px rgba(100,100,255,0.1),0 0 0 8px rgba(100,100,255,0.1),0 0 20px rgba(100,100,255,0.1);
-    animation: animate 3s linear infinite;
+    animation: shoot 3s linear infinite;
     overflow: visible !important;
 }
 section span::before{
@@ -381,57 +381,57 @@ section span::before{
     height: 1px;
     background: linear-gradient(90deg,#93dcf0,transparent);
 }
-@keyframes animate {
+@keyframes shoot {
     0% {
         transform: translateX(0);
         opacity: 1;
     }
     70% {
-        transform: rotate(5deg) translateX(0);
+        transform: rotate(6deg) translateX(0);
         opacity: 1;
     }
     100% {
-        transform: rotate(-5deg) translateX(-2200px);
-        opacity: 0;
+        transform: rotate(-4deg) translateX(-2200px);
+        opacity: 0.4;
     }
 }
 span:nth-child(1){
-    top: 50px;
+    top: 30px;
     right: -10px;
     left: initial;
     animation-delay: 0s;
     animation-duration: 10s;
 }
 span:nth-child(2){
-    top: 100px;
+    top: 110px;
     right: -10px;
     left: initial;
     animation-delay: 0.2s;
     animation-duration: 6s;
 }
 span:nth-child(3){
-    top: 70px;
+    top: 40px;
     right: -10px;
     left: initial;
     animation-delay: 0.4s;
     animation-duration: 6s;
 }
 span:nth-child(4){
-    top: 90px;
+    top: 130px;
     right: -10px;
     left: initial;
     animation-delay: 0.6s;
     animation-duration: 4s;
 }
 span:nth-child(5){
-    top: 65px;
+    top: 70px;
     right: -10px;
     left: initial;
     animation-delay: 0.8s;
     animation-duration: 6s;
 }
 span:nth-child(6){
-    top: 40px;
+    top: 150px;
     right: -10px;
     left: initial;
     animation-delay: 1s;
@@ -445,7 +445,7 @@ span:nth-child(7){
     animation-duration: 8s;
 }
 span:nth-child(8){
-    top: 76px;
+    top: 170px;
     right: -10px;
     left: initial;
     animation-delay: 3s;
@@ -458,22 +458,15 @@ span:nth-child(9){
     animation-delay: 0.75s;
     animation-duration: 10s;
 }
-span:nth-child(9){
-    top: 80px;
-    right: -10px;
-    left: initial;
-    animation-delay: 2s;
-    animation-duration: 6s;
-}
 span:nth-child(10){
-    top: 86px;
+    top: 130px;
     right: -10px;
     left: initial;
     animation-delay: 2s;
     animation-duration: 8s;
 }
 span:nth-child(11){
-    top: 72px;
+    top: 80px;
     right: -10px;
     left: initial;
     animation-delay: 2s;
