--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 
 .primary-btn:hover {
   transform: scale(1.08) !important;
+    box-shadow: 0 0 20px rgba(95, 21, 156, 1), 0 0 40px rgba(95, 21, 156, 0.2);
 }
 
 .primary-btn:active {
