--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,26 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   width: 100%;
 }
 
+.primary-btn::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        90deg,
+        transparent,
+        rgba(255, 255, 255, 0.2),
+        transparent
+    );
+    transition: left 0.5s ease-in-out;
+}
+
+.primary-btn:hover::before {
+    left: 100%;
+}
+
 /* Preloder */
 #preloder {
   position: fixed;
