--- a/css/main.css
+++ b/css/main.css
@@ -83,34 +83,8 @@ canvas {
 #main hr, hr {
     border-bottom: 1px solid #a0a0ff30;
     width: 80%;
+    max-width: 40rem;
     margin-bottom: 40px;
-}
-
-.nav__social {
-    position: fixed;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    padding: 20px 80px 20px 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    opacity: 0;
-    background-color: transparent;
-    z-index: 999;
-    border-left: solid #a0a0ff30 1px;
-}
-
-.nav__social a {
-    color: white;
-    font-size: 25px;
-    transition: transform 200ms ease-out;
-}
-
-.nav__social a:hover {
-    transform: scale(1.3);
 }
 
 /*----------------------------------------*/
@@ -152,6 +126,7 @@ canvas {
     font-size: 16px;
     letter-spacing: 1px;
     width: 80%;
+    max-width: 40rem;
     line-height: 28px;
     font-family: "electrolize", sans-serif;
 }
@@ -175,17 +150,17 @@ canvas {
     animation: gradient_301 5s ease infinite;
 }
 
-@media screen and (max-width: 926px) {
+@media screen and (max-width: 750px) {
+    #final-text-container {
+        top: 48%;
+    }
+
     #final-text {
         letter-spacing: 5px;
         font-size: 25px;
     }
     .universe-text {
         font-size: 45px;
-    }
-
-    .nav__social {
-        display: none !important;
     }
 }
 
@@ -475,6 +450,10 @@ button:hover span {
     box-shadow: 0 0 10px #0044ff, 0 0 20px #0044ff, 0 0 30px #0044ff;
     pointer-events: none;
     animation: fadeOut 1s forwards;
+}
+
+.wrapper {
+    display: none;
 }
 
 /*----------------------------------------*/
