--- a/css/main.css
+++ b/css/main.css
@@ -396,6 +396,20 @@ button:hover span {
     animation: twinkle 2s infinite alternate;
 }
 
+model-viewer {
+    z-index: 1;
+    position: absolute;
+    bottom: -4rem;
+    left: 45%;
+    width: 80%;
+    height: 40rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    transform: scale(0);
+    transition: all 1s ease-in-out;
+}
+
 @keyframes twinkle {
     0% {
         opacity: 1;
