--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -640,7 +640,6 @@ a:hover .icon__button {
 }
 .hero__image__container {
   position: relative;
-  height: 100vh;
   width: 100%;
 }
 .hero__image__container::before {
@@ -648,28 +647,25 @@ a:hover .icon__button {
   height: 28.5rem;
   width: 100%;
   position: absolute;
-  top: 50%;
+  bottom: 0;
   left: 50%;
-  transform: translate(-50%, -43.8%);
+  transform: translateX(-50%);
   border: solid rgba(0, 0, 255, 0.2) 2px;
   animation: shadow-apparition 0.7s ease-in 1.2s forwards;
 }
 .hero__image {
   width: 30rem !important;
-  position: absolute;
-  top: 50%;
+  position: relative;
+  bottom: 2px;
   left: 50%;
-  transform: translate(-48%, -60%) !important;
+  filter: brightness(0.9) contrast(1.1);
+  transform: translateX(-48%) !important;
 }
 @media only screen and (max-width: 405px) {
   .hero__image__container::before {
     content: "";
-    border: solid #0044ff 2px;
-    height: 50%;
+    height: 95%;
     width: 80%;
-    position: absolute;
-    bottom: 16%;
-    right: 2%;
   }
 }
 @keyframes shadow-apparition {
